--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,9 @@
 overwrite: true
-schema: "http://localhost:8080/graphql"
-documents: "src/graphql/**/*.graphql"
+schema: 'http://localhost:5000/graphql'
+documents: 'src/graphql/**/*.graphql'
 generates:
   src/graphql/generated/index.tsx:
     plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+      - 'typescript'
+      - 'typescript-operations'
+      - 'typescript-react-apollo'
