--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "deploy": "yarn build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
