--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build:prod": "env-cmd -f .env.production yarn build && firebase deploy",
     "gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -75,6 +76,7 @@
     "@types/react-select": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.16.0",
