--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-textarea-autosize": "^8.3.0",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -74,6 +76,8 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.1.2",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/react-textarea-autosize": "^4.3.5",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "env-cmd": "^10.1.0",
